Rewrite task 17..draft working